kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: prod
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 8080
